milestone5/css/_partials/project.css
/**************************************************************************
PROJECT
***************************************************************************/

/* BACKGROUND */

#bg-app {
    height: 100vh;
    background: linear-gradient(to bottom, var( --color-bg1) 145px, var( --color-bg2) 145px); 
}

/* APP */

/* general container */
#webapp  {
    position: absolute;
    width: 70%;
    height: 90vh;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

.container {
    width: 1000px;
    margin: 0 auto;
}

.box-avatar {
    gap: .9375rem;
}

img.photo-avatar {
    display: block;
    width: 3.125rem;
    object-fit: cover;
    border-radius: 3.125rem;
}

.box-avatars > img.photo-list-avatar {
    display: block;
    width: 3.75rem;
    object-fit: cover;
    border-radius: 3.125rem;
    margin-right: 1.25rem;
}

#setting .setting-main {
    flex-grow: 1;
    overflow: hidden;
}

.icons {
     gap: 1.25rem;
}

/* left webapp */
#setting {
    width: 500px;
    flex-shrink: 0;
}

#setting .setting-top {
    border-right: 1px solid var(--color-icone);
}

#setting .setting-top,
#chat .top-single-chat {
    height: var(--size-header);
    padding: 0.625rem 1.25rem;
    background-color: var(--color-bg-header);
}

#setting .setting-main > .notification {
    height: var(--size-area-avatar);
    padding-left: 1.25rem;
    background-color: var(--color-notification);
}

#setting .setting-main > .search-chat {
    height:3.125rem;
    background-color: var(--color-bg-left);
}

#setting .setting-main .search-chat > i {
    background-color: var(--color-white);
    padding: 7px;
}

#setting .setting-main > ul.list-chats {
    overflow-y: auto;
    flex-grow: 1;
}

#setting .setting-main ul.list-chats > li.preview-chat:hover {
    background-color: var(--color-bg-header);
}

#setting .setting-main ul.list-chats > li.preview-chat {
    padding:0.625rem 1.25rem;
    background-color: var(--color-white);
    border: .0313rem solid var(--color-bg-left);
    cursor: pointer;
}

#setting .setting-main {
    background-color: var(--color-bg-left);
}

.preview-chat {
    position: relative;
}

#setting .setting-main .list-chats .preview-chat .box-avatars .info-avatar p > span {
    position: absolute;
    top: .3125rem;
    left: 28.3125rem;
    text-align: end;
}

.icons li > i {
    font-size: 1.5rem;
    color: var(--color-icone);
    text-align: center;
}

.notification {
    padding: 5px;
}

.notification > i {
    font-size: 1.5rem;
    width: 50px;
    height: 50px;
    color: var(--color-notification);
    background-color: var(--color-white);
    line-height: 50px;
    border-radius: 50px;
    margin-right: 1.25rem;
}

.notification .text-notification > a {
    font-size: 0.75rem;
    color: var(--color-icone);
}

input.text-search {
    flex-grow: 1;
    margin-right: 10px;
    height: 1.875rem;
    outline: 0;
}

.search-chat {
    background-color: var(--color-white);
}

.search-chat > i {
    margin-left: 10px;
    width: 3.75rem;
    text-align: center;
}

/* right webapp */
#chat {
    flex-grow: 1;
}

.container-message {
    max-width: 80%;
    margin: 0 auto;
}

.bottom-chat > input {
    flex-grow: 1;
    margin: 10px 0;
}

#chat .bottom-chat > i {
    width: 90px;
    font-size: 1.5rem;
    color: var(--color-icone);
    line-height: var(--size-header);
    text-align: center;
}

#chat .single-chat {
    height: calc(100% - var(--size-header));
    background-image: url('/milestone5/img/mine.jpg');
    overflow-y: auto;
}

#chat {
    position: relative;
}

#chat .top-single-chat {
    height: var(--size-header);
    background-color: var(--color-bg-header);
    position: absolute;
    top: 0;
    right: 0;
    left: 0;
    z-index: 9;
}

#chat .main-single-chat {
    flex-grow: 1;
    overflow-y: auto;
}

#chat .bottom-chat {
    height: var(--size-header);
    background-color: #f5eee8;
}

.box-message {
    margin: 20px;
    position: relative;
}

.sent {
    background-color: var(--color-white);
    width: 310px;
    padding: 20px 20px 25px;
    border-radius: 10px;
}

.received {
    background-color: #d5f9ba;
    width: 310px;
    padding: 20px 20px 25px;
    border-radius: 10px;
    align-self: end;
}

#chat .main-single-chat .container-message.box-message > p  {
    color: var(--color-icone);
}

#chat .main-single-chat .container-message .box-message p > span {
    position: absolute;
    bottom: .3125rem;
    right: .3125rem;
    text-align: end;
}

main.box-istruction {
    background-color: var(--color-white);
    width: 100%;
    padding-top: var(--size-header);
    text-transform: uppercase;
    color: var(--color-bg1);
}

